Update Definitivo.ipynb with more comments

--- a/Definitivo.ipynb
+++ b/Definitivo.ipynb
@@ -273,10 +273,10 @@
         "        image = Image.open(image_path)\n",
         "      \n",
         "        \n",
-        "        mask = ~np.array(Image.open(mask_path).convert(\"L\")) # masks are flipped because of qgis\n",
-        "        mask = mask.astype(\"float\")\n",
-        "        mask[mask > 0.0] = 1.0\n",
-        "        mask = np.expand_dims(mask, -1)\n",
+        "        mask = ~np.array(Image.open(mask_path).convert(\"L\")) # convert to greyscale (1 channel) masks are flipped because of qgis\n",
+        "        mask = mask.astype(\"float\")\n", #convert to float data type \n"
+        "        mask[mask > 0.0] = 1.0\n", #convert to binary mask (where structures are 1 and background = 0) \n"
+        "        mask = np.expand_dims(mask, -1) #adds another dimension to the tensor \n",
         "\n",
         "\n",
         "        if(config['corona_path']!=\"\"):\n",
@@ -292,11 +292,11 @@
         "          image=torch.cat((image, image_corona), 0)\n",
         "      \n",
         "        else:\n",
-        "          transformed = self.transform(image=np.asarray(image),mask=np.asarray(mask))\n",
+        "          transformed = self.transform(image=np.asarray(image),mask=np.asarray(mask)) #convert image to a numpy array\n",
         "          image = transformed[\"image\"]\n",
         "\n",
         "        \n",
-        "        mask = transformed[\"mask\"].permute(2,0,1)\n",
+        "        mask = transformed[\"mask\"].permute(2,0,1) #permute dimensions \n",
         "        \n",
         "            \n",
         "        return image, mask, image_filename\n",
