Revert "Update Definitivo.ipynb translate italian to english"
This reverts commit a73ab935098f5ba3682c1304e51398838e25f32a.

--- a/Definitivo.ipynb
+++ b/Definitivo.ipynb
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###1.1 Loading of paths and libraries, as well as the model configuration skeleton"
+        "###1.1Caricamento di path e librerie, oltre allo scheletro della configurazione del modello"
       ],
       "metadata": {
         "id": "Hxq9RgqHqEDX"
@@ -112,7 +112,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###1.2 Divide the dataset in train set (80%), validation set (10%) and test set (10%)"
+        "###1.2 Divisione del dataset in train set (80%), validation set (10%) e test set (10%)"
       ],
       "metadata": {
         "id": "-LFnjlL2qP8d"
@@ -165,7 +165,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Crop and resize depend on the size of the input \n",
+        "#Crop e resize dipendono dalla dimensione dell'input \n",
         "def esegui_trasformazioni():\n",
         "  if(config[\"dim_input\"]=='1k' and config['corona_path']!=\"\"): #stesso crop per input bing e input corona\n",
         "    train_transform = A.Compose([\n",
@@ -251,8 +251,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Loading the dataset with the relevant transformations, depending on the type of model we are analysing,\n",
-        "#i.e. based on the input size of each image and the input channels. \n",
+        "#Carico il dataset con le relative trasformazioni, in base al tipo di modello che stiamo analizzando,\n",
+        "#cioè in base alla dimensione di input di ogni immagine e ai canali di input. \n",
         "class ArcheoDataset(Dataset):\n",
         "    def __init__(self, images_filenames, images_directory, masks_directory, transform=None):\n",
         "        self.images_filenames = images_filenames\n",
@@ -316,7 +316,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###1.4 Initialising the model"
+        "###1.4 Inizializzazione del modello"
       ],
       "metadata": {
         "id": "iwtR-1gPpd19"
@@ -501,7 +501,7 @@
         "                      in_channels=config['in_channels'], \n",
         "                      out_classes=1,) #creazione del modello\n",
         "\n",
-        "#Training the model\n",
+        "#TRAINING DEL MODELLO\n",
         "\n",
         "  trainer = pl.Trainer(\n",
         "    max_epochs=config[\"epochs\"],\n",
@@ -534,7 +534,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##2 Testing of each model\n"
+        "##2 Test di ogni modello\n"
       ],
       "metadata": {
         "id": "THEwd9-GrQwQ"
