Revert "Update Definitivo.ipynb - translate italian to english"
This reverts commit d26eba1cfa01b623b66d4a5aaef31baed06c7618.

--- a/Definitivo.ipynb
+++ b/Definitivo.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1. Training the model"
+        "## 1. Training dei modelli"
       ],
       "metadata": {
         "id": "gFEAYIshp9ly"
@@ -242,7 +242,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###1.3 Loading the dataset with its transformations"
+        "###1.3 Caricamento del dataset con le relative trasformazioni"
       ],
       "metadata": {
         "id": "VfgisvZxqlWQ"
@@ -325,8 +325,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Initialisation of the model, calculation of the loss function on the mask, probabilities obtained \n",
-        "#with the sigmoid. Probabilities greater than 0.5 are transformed into 1, those below 0.5 into 0.  \n",
+        "#Inizializzazione del modello, calcolo della funzione di loss sulla maschere, probabilità ottenute \n",
+        "#con il sigmoid. Le probabilità maggiori di 0.5 vengono trasformate in 1, quelle sotto lo 0.5 in 0.  \n",
         "class ArcheoModel(pl.LightningModule):\n",
         "\n",
         "    def __init__(self, arch, encoder_name, in_channels, out_classes, **kwargs):\n",
@@ -466,7 +466,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###1.5 Training of each model according to its characteristics"
+        "###1.5 Training di ogni modello in base alle sue caratteristiche"
       ],
       "metadata": {
         "id": "gorxvbn7rFnL"
@@ -475,7 +475,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Each model is trained according to its characteristics. \n",
+        "#Ogni modello viene allenato in base alle sue caratteristiche. \n",
         "for i in range(len(modelli)):\n",
         "  set_config(modelli[i])\n",
         "  filenames_train = np.asarray(list(sorted(os.listdir(os.path.join(config[\"dataset_path\"], \"train/sites\")))))\n",
@@ -557,7 +557,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#10 tests, with different transformations, for each model. \n",
+        "#10 test, con diverse trasformazioni, per ogni modello. \n",
         "iou_test_modelli={}\n",
         "for i in range(len(modelli)):\n",
         "  set_config(modelli[i])\n",
@@ -608,7 +608,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#I print statistics for each model (mean,min,max,std)\n",
+        "#Stampo le statistiche per ogni modello (mean,min,max,std)\n",
         "for i in modelli:\n",
         "  x=np.array(iou_test_modelli[i])\n",
         "  print(\"Le statistiche sul test set per il modello \"+i+\" sono:\")\n",
@@ -647,7 +647,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##3 Evaluation Models"
+        "##3 Valutazione Modelli"
       ],
       "metadata": {
         "id": "nxyJKE2ZVQEW"
@@ -656,7 +656,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 3.1 Uploading csv's containing site coordinates"
+        "### 3.1 Caricamento dei csv contenenti coordinate siti"
       ],
       "metadata": {
         "id": "WDsztoQgZnBL"
@@ -706,7 +706,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###3.2 Loading the dataset by applying predefined transformations to it\n",
+        "###3.2 Carico il dataset applicandogli trasformazioni prestabilite\n",
         "\n",
         "\n",
         "\n"
@@ -782,7 +782,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###3.3 Saving individual predictions"
+        "###3.3 Salvataggio delle singole predizioni"
       ],
       "metadata": {
         "id": "uSN2bOPoZ_1p"
@@ -822,7 +822,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###3.4 Given the predictions for each site, I create the corresponding tif and shapefiles"
+        "###3.4 Date le predizioni per ogni sito, creo i tif e gli shapefile corrispondenti"
       ],
       "metadata": {
         "id": "izYHcVUK2fqL"
@@ -942,7 +942,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###3.5 Given input shapefiles and return a geojson containing for each site TP,TN,FP,FN"
+        "###3.5 Dati gli shapefile in input e restituisco un geojson contenente per ogni sito TP,TN,FP,FN"
       ],
       "metadata": {
         "id": "-0IVHb-nJXQA"
@@ -1112,7 +1112,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 4 Analysis results"
+        "## 4 Analisi Risultati"
       ],
       "metadata": {
         "id": "IJaH3-WzNyMt"
@@ -1121,7 +1121,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4.1 Calculation of the confusion matrix in an automatic and adapted manner"
+        "### 4.1 Calcolo della matrice di confusione, in modo automatico e adattato"
       ],
       "metadata": {
         "id": "T_0SyTrCU8Uj"
@@ -1271,7 +1271,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##5 Selection Area"
+        "##5 Area di selezione"
       ],
       "metadata": {
         "id": "_OVuUTDUGFpo"
@@ -1280,7 +1280,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###5.1 Create predictions for each tile"
+        "###5.1 Crea le predizioni per ogni tessera"
       ],
       "metadata": {
         "id": "ckmrJv7FV3jQ"
@@ -1356,7 +1356,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###5.2 Assembles the total image of the selection area"
+        "###5.2 Assembla l'immagine totale dell'area di selezione"
       ],
       "metadata": {
         "id": "UjqZMMcmWAnx"
